--- a/Data_Crawling.ipynb
+++ b/Data_Crawling.ipynb
@@ -96,6 +96,9 @@
    "source": [
     "from requests.exceptions import ConnectTimeout\n",
     "import time\n",
+    "import logging\n",
+    "\n",
+    "logging.basicConfig(filename='error_log.txt', level=logging.ERROR)\n",
     "\n",
     "def capture_all_stock_data(capture_date, max_retries=3, retry_delay=20):\n",
     "    df_companies = listing_companies(live=True)\n",
@@ -112,16 +115,22 @@
     "                all_data[symbol] = df\n",
     "                break\n",
     "            except ConnectTimeout as e:\n",
-    "                print(f\"Connection timeout for symbol {symbol}: {e}\")\n",
+    "                error_message = f\"Connection timeout for symbol {symbol}: {e}\"\n",
+    "                logging.error(error_message)\n",
     "                retries += 1\n",
     "                if retries < max_retries:\n",
-    "                    print(f\"Retrying in {retry_delay} seconds...\")\n",
+    "                    retry_message = f\"Retrying in {retry_delay} seconds...\"\n",
+    "                    logging.error(retry_message)\n",
+    "                    print(retry_message)\n",
     "                    time.sleep(retry_delay)\n",
     "                else:\n",
-    "                    print(f\"Max retries exceeded for symbol {symbol}. Skipping.\")\n",
+    "                    max_retry_message = f\"Max retries exceeded for symbol {symbol}. Skipping.\"\n",
+    "                    logging.error(max_retry_message)\n",
+    "                    print(max_retry_message)\n",
     "                    break \n",
     "\n",
-    "        print(f\"Processed {i}/{total_symbols} symbols\")\n",
+    "        progress_message = f\"Processed {i}/{total_symbols} symbols\"\n",
+    "        print(progress_message)\n",
     "\n",
     "    combined_df = pd.concat(all_data.values(), keys=all_data.keys(), names=['Symbol'])\n",
     "\n",
