small update for daily crawl

--- a/Data_Crawling.ipynb
+++ b/Data_Crawling.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 955,
+   "execution_count": 993,
    "id": "b982d6d8",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 956,
+   "execution_count": 994,
    "id": "07beda7b",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 957,
+   "execution_count": 995,
    "id": "9a9bb7e7",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 958,
+   "execution_count": 996,
    "id": "6733aac2",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 959,
+   "execution_count": 997,
    "id": "ee69fb8e",
    "metadata": {},
    "outputs": [],
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 960,
+   "execution_count": 998,
    "id": "e507fe33",
    "metadata": {},
    "outputs": [],
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 961,
+   "execution_count": 999,
    "id": "ad582068",
    "metadata": {},
    "outputs": [],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 962,
+   "execution_count": 1000,
    "id": "e1d849b6",
    "metadata": {},
    "outputs": [],
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 963,
+   "execution_count": 1001,
    "id": "870e0cf9",
    "metadata": {},
    "outputs": [],
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 964,
+   "execution_count": 1002,
    "id": "acb084f1",
    "metadata": {},
    "outputs": [],
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 965,
+   "execution_count": 1003,
    "id": "70e1f037",
    "metadata": {},
    "outputs": [],
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 966,
+   "execution_count": 1004,
    "id": "67d110a6",
    "metadata": {},
    "outputs": [],
@@ -461,12 +461,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 967,
+   "execution_count": 1005,
    "id": "ecbb3fa1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def export_data_to_excel(capture_date, data_dict, listing_df, list_name, file_path):\n",
+    "def export_data_to_excel(data_dict, listing_df, list_name, file_path):\n",
     "    excel = pd.ExcelWriter(file_path, mode='a', if_sheet_exists='replace') if os.path.exists(file_path) else pd.ExcelWriter(file_path, mode='w')\n",
     "\n",
     "    with excel as writer:\n",
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 968,
+   "execution_count": 1006,
    "id": "b14e02fa",
    "metadata": {},
    "outputs": [],
@@ -519,7 +519,7 @@
     "\n",
     "    data_dict = {f.__name__: process_symbols(company_symbols, f, capture_date) for f in functions_to_capture}\n",
     "\n",
-    "    export_data_to_excel(capture_date, data_dict, company_listing_df, 'Company', file_path)\n",
+    "    export_data_to_excel(data_dict, company_listing_df, 'Company', file_path)\n",
     "    \n",
     "    logger.info(\"Capture all daily stock data ended.\")\n",
     "    return company_listing_df, *data_dict.values()"
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 969,
+   "execution_count": 1007,
    "id": "13b4b130",
    "metadata": {},
    "outputs": [],
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 970,
+   "execution_count": 1008,
    "id": "0fe62038",
    "metadata": {},
    "outputs": [],
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 971,
+   "execution_count": 1009,
    "id": "cf8df49e",
    "metadata": {},
    "outputs": [],
@@ -638,7 +638,7 @@
     "\n",
     "    data_dict = {s: process_symbols(fund_symbols, capture_fund_details, s, capture_date) for s in FUND_DETAILS_CATE}\n",
     "\n",
-    "    export_data_to_excel(capture_date, data_dict, fund_listing_df, 'Fund', file_path)\n",
+    "    export_data_to_excel(data_dict, fund_listing_df, 'Fund', file_path)\n",
     "    \n",
     "    logger.info(\"Capture all daily fund data ended.\")\n",
     "    return fund_listing_df, *data_dict.values() \n",
@@ -655,13 +655,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 972,
+   "execution_count": 1010,
    "id": "792973c4",
    "metadata": {},
    "outputs": [],
    "source": [
     "def capture_all_daily(capture_date, limit=None):\n",
-    "    date_string = capture_date.strftime(\"%Y-%m-%d\")\n",
+    "    date_string = capture_date.strftime(\"%d-%m-%Y\")\n",
     "    file_path = f'outputs/output_{date_string}.xlsx'\n",
     "\n",
     "    if os.path.exists(file_path):\n",
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 973,
+   "execution_count": 1011,
    "id": "f951196a",
    "metadata": {},
    "outputs": [
@@ -2371,7 +2371,7 @@
        "   1  VNDAF       9.8  2023-12-11  Tiền và tương đương tiền}))"
       ]
      },
-     "execution_count": 973,
+     "execution_count": 1011,
      "metadata": {},
      "output_type": "execute_result"
     }
