config and test run with airflow

--- a/Data_Crawling.ipynb
+++ b/Data_Crawling.ipynb
@@ -21,18 +21,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 518,
+   "execution_count": 1,
    "id": "07beda7b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<FileHandler /Users/TuanKiet/Desktop/DSLearn/vnstock_project/logs.log (NOTSET)>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from vnstock import *\n",
     "from datetime import datetime\n",
@@ -51,7 +43,7 @@
     "    logger.removeHandler(handler)\n",
     "\n",
     "if not len(logger.handlers) > 0:\n",
-    "    file_handler = logging.FileHandler('logs.log')\n",
+    "    file_handler = logging.FileHandler('data/logs.log')\n",
     "\n",
     "    formatter = logging.Formatter('%(asctime)s - %(levelname)s - %(message)s')\n",
     "    file_handler.setFormatter(formatter)\n",
@@ -680,7 +672,7 @@
     "def capture_all_daily(capture_date, limit=None):\n",
     "    logger.info(\"Capture all daily data started.\")\n",
     "    date_string = capture_date.strftime(\"%d-%m-%Y\")\n",
-    "    file_path = f'outputs/output_daily_{date_string}.xlsx'\n",
+    "    file_path = f'data/outputs/output_daily_{date_string}.xlsx'\n",
     "\n",
     "    if os.path.exists(file_path):\n",
     "        os.remove(file_path)\n",
@@ -988,7 +980,7 @@
     "    logger.info(\"Capture all quarterly data started.\")\n",
     "\n",
     "    date_string = capture_date.strftime(\"%d-%m-%Y\")\n",
-    "    file_path = f'outputs/output_quarterly_{date_string}.xlsx'\n",
+    "    file_path = f'data/outputs/output_quarterly_{date_string}.xlsx'\n",
     "\n",
     "    if os.path.exists(file_path):\n",
     "        os.remove(file_path)\n",
