--- a/transforms/transform_demo.ipynb
+++ b/transforms/transform_demo.ipynb
@@ -24,16 +24,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "24/01/24 10:43:44 WARN Utils: Your hostname, Plutos-MacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 192.168.1.6 instead (on interface en0)\n",
-      "24/01/24 10:43:44 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "24/01/25 10:26:42 WARN Utils: Your hostname, Plutos-MacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 172.20.10.8 instead (on interface en0)\n",
+      "24/01/25 10:26:42 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "24/01/25 10:26:43 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/01/24 10:43:45 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
      ]
     }
    ],
    "source": [
-    "spark = SparkSession.builder.appName(\"TransformFile\").getOrCreate()"
+    "spark = SparkSession.builder.appName(\"TransformFile\").config(\"spark.jars\", \"./postgresql-42.7.1.jar\").getOrCreate()"
    ]
   },
   {
@@ -110,7 +110,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "24/01/24 10:43:51 WARN SparkStringUtils: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n"
+      "24/01/25 10:26:49 WARN SparkStringUtils: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n"
      ]
     },
     {
@@ -596,13 +596,6 @@
       "only showing top 10 rows\n",
       "\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
     }
    ],
    "source": [
@@ -620,6 +613,7 @@
     "    wma_udf = udf(wma)\n",
     "\n",
     "    df = df.withColumn(f\"WMA {n} Days\", wma_udf(collect_list('Close').over(window_spec), lit(n)))\n",
+    "    df = df.withColumn(f\"WMA {n} Days\", col(f\"WMA {n} Days\").cast(\"double\"))\n",
     "\n",
     "    return df\n",
     "\n",
@@ -1389,6 +1383,7 @@
     "\n",
     "    window_spec = Window().partitionBy('Symbol').orderBy('Date').rowsBetween(-n + 1, 0)\n",
     "    df = df.withColumn(f'FT_Min {n} days', ft_min_udf(collect_list('Close').over(window_spec)))\n",
+    "    df = df.withColumn(f'FT_Min {n} days', col(f'FT_Min {n} days').cast(\"double\"))\n",
     "\n",
     "    return df\n",
     "\n",
@@ -1434,6 +1429,7 @@
     "\n",
     "    window_spec = Window().partitionBy('Symbol').orderBy('Date').rowsBetween(-n + 1, 0)\n",
     "    df = df.withColumn(f'FT_Max {n} days', ft_max_udf(collect_list('Close').over(window_spec)))\n",
+    "    df = df.withColumn(f'FT_Max {n} days', col(f'FT_Max {n} days').cast(\"double\"))\n",
     "\n",
     "    return df\n",
     "\n",
@@ -1501,6 +1497,7 @@
     "\n",
     "    window_spec = Window().partitionBy('Symbol').orderBy('Date').rowsBetween(-n + 1, 0)\n",
     "    df = df.withColumn(f'FT_Mean {n} days', ft_mean_udf(collect_list('Close').over(window_spec)))\n",
+    "    df = df.withColumn(f'FT_Mean {n} days', col(f'FT_Mean {n} days').cast(\"double\"))\n",
     "\n",
     "    return df\n",
     "\n",
@@ -1730,13 +1727,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
+   "id": "e0f4fa19",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Symbol: StringType()\n",
+      "Open: LongType()\n",
+      "High: LongType()\n",
+      "Low: LongType()\n",
+      "Close: LongType()\n",
+      "Volume: LongType()\n",
+      "Date: DateType()\n",
+      "Price Change To 1 Day(s) Ago: DoubleType()\n",
+      "Price Change To 2 Day(s) Ago: DoubleType()\n",
+      "Price Change To 3 Day(s) Ago: DoubleType()\n",
+      "Volume Change To 1 Day(s) Ago: DoubleType()\n",
+      "Volume Change To 2 Day(s) Ago: DoubleType()\n",
+      "Volume Change To 3 Day(s) Ago: DoubleType()\n",
+      "Price Difference: LongType()\n",
+      "Median Volume 3 day(s) periods: DoubleType()\n",
+      "Std Volume 3 day(s) periods: DoubleType()\n",
+      "Median Price Change 3 day(s) periods: DoubleType()\n",
+      "Std Price Change 3 day(s) periods: DoubleType()\n",
+      "Median Volume Change 3 day(s) periods: DoubleType()\n",
+      "Std Volume Change 3 day(s) periods: DoubleType()\n",
+      "SMA 3 Days: DoubleType()\n",
+      "SMA 5 Days: DoubleType()\n",
+      "WMA 3 Days: DoubleType()\n",
+      "WMA 5 Days: DoubleType()\n",
+      "EMA 3 Days: DoubleType()\n",
+      "EMA 5 Days: DoubleType()\n",
+      "Bool SMA 3 Days: DoubleType()\n",
+      "Bool SMA 5 Days: DoubleType()\n",
+      "Bool WMA 3 Days: DoubleType()\n",
+      "Bool WMA 5 Days: DoubleType()\n",
+      "Bool EMA 3 Days: DoubleType()\n",
+      "Bool EMA 5 Days: DoubleType()\n",
+      "MACD of EMA3 and EMA5: DoubleType()\n",
+      "%K 3 Days: DoubleType()\n",
+      "%K 5 Days: DoubleType()\n",
+      "%D 3 Days: DoubleType()\n",
+      "%D 5 Days: DoubleType()\n",
+      "RSI 3 Days: DoubleType()\n",
+      "RSI 5 Days: DoubleType()\n",
+      "Williams %R 3 Days: DoubleType()\n",
+      "AD 3 Days: DoubleType()\n",
+      "CCI 3 Days: DoubleType()\n",
+      "Bool AD 3 Days: IntegerType()\n",
+      "Bool MACD of EMA3 and EMA5: IntegerType()\n",
+      "Bool %K 3 Days: IntegerType()\n",
+      "Bool %K 5 Days: IntegerType()\n",
+      "Bool %D 3 Days: IntegerType()\n",
+      "Bool %D 5 Days: IntegerType()\n",
+      "Bool CCI 3 Days: IntegerType()\n",
+      "Bool Williams %R 3 Days: IntegerType()\n",
+      "Percentage Change 1 Day(s): DoubleType()\n",
+      "Percentage Change 2 Day(s): DoubleType()\n",
+      "Percentage Change 3 Day(s): DoubleType()\n",
+      "OBV: LongType()\n",
+      "FT_Min 6 days: DoubleType()\n",
+      "FT_Max 6 days: DoubleType()\n",
+      "FT_Mean 6 days: DoubleType()\n"
+     ]
+    }
+   ],
+   "source": [
+    "for field in result_df.schema.fields:\n",
+    "    print(f\"{field.name}: {str(field.dataType)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1887ee5",
+   "metadata": {},
+   "source": [
+    "# Write to Postgres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "d25ac45a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "import psycopg2\n",
+    "from pyspark.sql.types import StringType, IntegerType, DoubleType, LongType\n",
+    "\n",
+    "db_params = {\n",
+    "    \"host\": \"localhost\",\n",
+    "    \"port\": \"5432\",\n",
+    "    \"database\": \"vnstockdw\",\n",
+    "    \"user\": \"postgres\",\n",
+    "    \"password\": \"postgres\"\n",
+    "}\n",
+    "\n",
+    "table_name = \"stock_history\"\n",
+    "table_schema = \"public\"\n",
+    "\n",
+    "def spark_to_postgres_type(spark_type):\n",
+    "    if spark_type == DoubleType() or spark_type == LongType():\n",
+    "        return \"DOUBLE PRECISION\"\n",
+    "    elif spark_type == IntegerType():\n",
+    "        return \"INT\"\n",
+    "    else:\n",
+    "        return \"VARCHAR(255)\"\n",
+    "\n",
+    "column_definitions = {field.name: spark_to_postgres_type(field.dataType) for field in result_df.schema.fields}\n",
+    "\n",
+    "conn = psycopg2.connect(**db_params)\n",
+    "cur = conn.cursor()\n",
+    "\n",
+    "cur.execute(f\"SELECT EXISTS (SELECT 1 FROM information_schema.tables WHERE table_name = '{table_name}' AND table_schema = '{table_schema}')\")\n",
+    "table_exists = cur.fetchone()[0]\n",
+    "print(table_exists)\n",
+    "if not table_exists:\n",
+    "    columns_str = ', '.join([f\"\"\"\"{col}\" {col_type}\"\"\" for col, col_type in column_definitions.items()])\n",
+    "    create_table_query = f\"CREATE TABLE {table_schema}.{table_name} ({columns_str})\"\n",
+    "    print(create_table_query)\n",
+    "    cur.execute(create_table_query)\n",
+    "\n",
+    "for col, col_type in column_definitions.items():\n",
+    "    cur.execute(f\"SELECT EXISTS (SELECT 1 FROM information_schema.columns WHERE table_name = '{table_name}' AND table_schema = '{table_schema}' AND column_name = '{col}')\")\n",
+    "    column_exists = cur.fetchone()[0]\n",
+    "    if not column_exists:\n",
+    "        alter_table_query = f\"ALTER TABLE {table_schema}.{table_name} ADD COLUMN {col} {col_type}\"\n",
+    "        cur.execute(alter_table_query)\n",
+    "\n",
+    "conn.commit()\n",
+    "cur.close()\n",
+    "conn.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "5bb5194b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_df.write.format(\"jdbc\").mode(\"overwrite\") \\\n",
+    "    .option(\"driver\", \"org.postgresql.Driver\") \\\n",
+    "    .option(\"url\", f\"jdbc:postgresql://{db_params['host']}:{db_params['port']}/{db_params['database']}\") \\\n",
+    "    .option(\"dbtable\", f\"{table_schema}.{table_name}\") \\\n",
+    "    .option(\"user\", db_params[\"user\"]).option(\"password\", db_params[\"password\"]).mode(\"append\").save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "id": "5cc1f41e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# spark.stop()"
+    "spark.stop()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2b93e55",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
