--- a/model_dev/model_dev_feature_selection.ipynb
+++ b/model_dev/model_dev_feature_selection.ipynb
@@ -5000,11 +5000,467 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Export pickle file"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pickle\n",
+    "pickle_out = open(\"stock_classifier.pkl\",\"wb\")\n",
+    "pickle.dump(xgb_clf, pickle_out)\n",
+    "pickle_out.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ft_min_6_days</th>\n",
+       "      <th>williams_%r_3_days</th>\n",
+       "      <th>bool_williams_%r_3_days</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>ema_5_days</th>\n",
+       "      <th>macd_of_ema3_and_ema5</th>\n",
+       "      <th>bool_%d_5_days</th>\n",
+       "      <th>obv</th>\n",
+       "      <th>%k_5_days</th>\n",
+       "      <th>cci_3_days</th>\n",
+       "      <th>std_volume_change_3_day(s)_periods</th>\n",
+       "      <th>price_change_to_3_day(s)_ago</th>\n",
+       "      <th>bool_ema_5_days</th>\n",
+       "      <th>rsi_5_days</th>\n",
+       "      <th>bool_ema_3_days</th>\n",
+       "      <th>volume_change_to_3_day(s)_ago</th>\n",
+       "      <th>ema_3_days</th>\n",
+       "      <th>sma_5_days</th>\n",
+       "      <th>bool_sma_5_days</th>\n",
+       "      <th>%d_3_days</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>-33.333333</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>786100.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>786100.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>-25.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1907900.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1907900.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7768.571429</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>100.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.250000</td>\n",
+       "      <td>-16.666667</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1686400.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1686400.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>5.941433e+05</td>\n",
+       "      <td>360.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1256000.0</td>\n",
+       "      <td>7892.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>100.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>-0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1052500.0</td>\n",
+       "      <td>7995.497814</td>\n",
+       "      <td>37.100611</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1052500.0</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>9.142255e+04</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-633900.0</td>\n",
+       "      <td>8032.598425</td>\n",
+       "      <td>7982.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>100.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>-38.356164</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>4371800.0</td>\n",
+       "      <td>8121.931800</td>\n",
+       "      <td>75.009376</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4371800.0</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>1.960059e+06</td>\n",
+       "      <td>360.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3297800.0</td>\n",
+       "      <td>8196.941176</td>\n",
+       "      <td>8090.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>100.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>177785</th>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>-2.906977</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>81780.176529</td>\n",
+       "      <td>6616.515198</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>1.115049e+03</td>\n",
+       "      <td>40900.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>80.202802</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>800.0</td>\n",
+       "      <td>88396.691726</td>\n",
+       "      <td>77940.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>87.327824</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>177788</th>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>-0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>96920.131261</td>\n",
+       "      <td>5966.955218</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>90.168176</td>\n",
+       "      <td>2.066398e+03</td>\n",
+       "      <td>6200.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>73.055578</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1000.0</td>\n",
+       "      <td>102887.086479</td>\n",
+       "      <td>96600.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>79.009297</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>177789</th>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>-100.000000</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>1200.0</td>\n",
+       "      <td>95780.083544</td>\n",
+       "      <td>2413.459694</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1200.0</td>\n",
+       "      <td>23.255814</td>\n",
+       "      <td>-39.534884</td>\n",
+       "      <td>2.253886e+03</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>53.992474</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-900.0</td>\n",
+       "      <td>98193.543237</td>\n",
+       "      <td>99780.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>65.141612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>177790</th>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>-0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>106520.080589</td>\n",
+       "      <td>6576.691033</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>1.154701e+02</td>\n",
+       "      <td>24900.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>72.647157</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-4000.0</td>\n",
+       "      <td>113096.771622</td>\n",
+       "      <td>104620.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>66.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>177793</th>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>-100.000000</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>1200.0</td>\n",
+       "      <td>119683.736622</td>\n",
+       "      <td>2103.359831</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1200.0</td>\n",
+       "      <td>45.161290</td>\n",
+       "      <td>-95.918367</td>\n",
+       "      <td>5.947549e+03</td>\n",
+       "      <td>-14900.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>51.316800</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>121787.096453</td>\n",
+       "      <td>121300.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>66.666667</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>90079 rows × 20 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        ft_min_6_days  williams_%r_3_days  bool_williams_%r_3_days     volume  \\\n",
+       "1            0.500000          -33.333333                      1.0   786100.0   \n",
+       "2            0.333333          -25.000000                      1.0  1907900.0   \n",
+       "3            0.250000          -16.666667                      1.0  1686400.0   \n",
+       "6            0.166667           -0.000000                      1.0  1052500.0   \n",
+       "7            0.166667          -38.356164                     -1.0  4371800.0   \n",
+       "...               ...                 ...                      ...        ...   \n",
+       "177785       0.166667           -2.906977                      1.0     2000.0   \n",
+       "177788       0.166667           -0.000000                      1.0     1000.0   \n",
+       "177789       0.166667         -100.000000                     -1.0     1200.0   \n",
+       "177790       0.166667           -0.000000                      1.0     1000.0   \n",
+       "177793       0.166667         -100.000000                     -1.0     1200.0   \n",
+       "\n",
+       "           ema_5_days  macd_of_ema3_and_ema5  bool_%d_5_days        obv  \\\n",
+       "1                 NaN                    NaN             NaN   786100.0   \n",
+       "2                 NaN                    NaN             NaN  1907900.0   \n",
+       "3                 NaN                    NaN             NaN  1686400.0   \n",
+       "6         7995.497814              37.100611             1.0  1052500.0   \n",
+       "7         8121.931800              75.009376             1.0  4371800.0   \n",
+       "...               ...                    ...             ...        ...   \n",
+       "177785   81780.176529            6616.515198             1.0     2000.0   \n",
+       "177788   96920.131261            5966.955218             1.0     1000.0   \n",
+       "177789   95780.083544            2413.459694             1.0    -1200.0   \n",
+       "177790  106520.080589            6576.691033             1.0     1000.0   \n",
+       "177793  119683.736622            2103.359831             1.0    -1200.0   \n",
+       "\n",
+       "         %k_5_days  cci_3_days  std_volume_change_3_day(s)_periods  \\\n",
+       "1              NaN         NaN                                 NaN   \n",
+       "2              NaN  100.000000                                 NaN   \n",
+       "3              NaN  100.000000                        5.941433e+05   \n",
+       "6       100.000000  100.000000                        9.142255e+04   \n",
+       "7       100.000000  100.000000                        1.960059e+06   \n",
+       "...            ...         ...                                 ...   \n",
+       "177785  100.000000  100.000000                        1.115049e+03   \n",
+       "177788  100.000000   90.168176                        2.066398e+03   \n",
+       "177789   23.255814  -39.534884                        2.253886e+03   \n",
+       "177790  100.000000  100.000000                        1.154701e+02   \n",
+       "177793   45.161290  -95.918367                        5.947549e+03   \n",
+       "\n",
+       "        price_change_to_3_day(s)_ago  bool_ema_5_days  rsi_5_days  \\\n",
+       "1                                NaN              NaN         NaN   \n",
+       "2                                NaN              NaN         NaN   \n",
+       "3                              360.0              NaN         NaN   \n",
+       "6                               90.0              1.0         NaN   \n",
+       "7                              360.0              1.0         NaN   \n",
+       "...                              ...              ...         ...   \n",
+       "177785                       40900.0              1.0   80.202802   \n",
+       "177788                        6200.0              1.0   73.055578   \n",
+       "177789                        5000.0             -1.0   53.992474   \n",
+       "177790                       24900.0              1.0   72.647157   \n",
+       "177793                      -14900.0             -1.0   51.316800   \n",
+       "\n",
+       "        bool_ema_3_days  volume_change_to_3_day(s)_ago     ema_3_days  \\\n",
+       "1                   NaN                            NaN            NaN   \n",
+       "2                   1.0                            NaN    7768.571429   \n",
+       "3                   1.0                      1256000.0    7892.000000   \n",
+       "6                   1.0                      -633900.0    8032.598425   \n",
+       "7                   1.0                      3297800.0    8196.941176   \n",
+       "...                 ...                            ...            ...   \n",
+       "177785              1.0                          800.0   88396.691726   \n",
+       "177788              1.0                        -1000.0  102887.086479   \n",
+       "177789             -1.0                         -900.0   98193.543237   \n",
+       "177790              1.0                        -4000.0  113096.771622   \n",
+       "177793             -1.0                          200.0  121787.096453   \n",
+       "\n",
+       "        sma_5_days  bool_sma_5_days   %d_3_days  \n",
+       "1              NaN              NaN         NaN  \n",
+       "2              NaN              NaN  100.000000  \n",
+       "3              NaN              NaN  100.000000  \n",
+       "6           7982.0              1.0  100.000000  \n",
+       "7           8090.0              1.0  100.000000  \n",
+       "...            ...              ...         ...  \n",
+       "177785     77940.0              1.0   87.327824  \n",
+       "177788     96600.0              1.0   79.009297  \n",
+       "177789     99780.0             -1.0   65.141612  \n",
+       "177790    104620.0              1.0   66.666667  \n",
+       "177793    121300.0             -1.0   66.666667  \n",
+       "\n",
+       "[90079 rows x 20 columns]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_3_days_top_20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xgb_clf.predict(X_3_days_top_20.iloc[[0]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['ft_min_6_days', 'williams_%r_3_days', 'bool_williams_%r_3_days',\n",
+       "       'volume', 'ema_5_days', 'macd_of_ema3_and_ema5', 'bool_%d_5_days',\n",
+       "       'obv', '%k_5_days', 'cci_3_days', 'std_volume_change_3_day(s)_periods',\n",
+       "       'price_change_to_3_day(s)_ago', 'bool_ema_5_days', 'rsi_5_days',\n",
+       "       'bool_ema_3_days', 'volume_change_to_3_day(s)_ago', 'ema_3_days',\n",
+       "       'sma_5_days', 'bool_sma_5_days', '%d_3_days'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_3_days_top_20.columns"
+   ]
   },
   {
    "cell_type": "markdown",
